--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
             </div>
 
             <h2>Perfil</h2>
-            <p>Profesional de IT con +4 años de experiencia en soporte técnico, administración de servidores y ciberseguridad. Certificado por Google y Cisco en redes y seguridad informática. Experto en diagnóstico y resolución de problemas de hardware/software.</p>
+            <p>Profesional de IT con +5 años de experiencia en soporte técnico, administración de sistemas y gestión tecnológica. Actualmente liderando transformación digital en agroindustria con IoT y automatización. Certificado por Google y Cisco en redes y ciberseguridad.</p>
 
             <h2>Idiomas</h2>
             <div class="language-item">
@@ -321,6 +321,10 @@
                 Ciberseguridad
                 <div class="skill-bar"><div class="skill-fill" style="width: 80%"></div></div>
             </div>
+            <div class="skill-item">
+                IoT / Automatización
+                <div class="skill-bar"><div class="skill-fill" style="width: 75%"></div></div>
+            </div>
         </div>
 
         <!-- Main Content -->
@@ -332,6 +336,20 @@
 
             <div class="section">
                 <h2 class="section-title">Experiencia Laboral</h2>
+
+                <div class="experience-item" style="border-left-color: #38a169;">
+                    <div class="job-title">Gerente General / Director de Tecnología</div>
+                    <div class="company">Bioenrich - Agroindustria Sostenible</div>
+                    <div class="date">Octubre 2024 - Presente (1 año 4 meses)</div>
+                    <ul class="job-description">
+                        <li>Liderazgo de transformación digital en operaciones agroindustriales</li>
+                        <li>Implementación de sistemas IoT para monitoreo de producción</li>
+                        <li>Desarrollo de dashboards de gestión y análisis de datos</li>
+                        <li>Automatización de procesos con sensores y controladores</li>
+                        <li>Gestión de infraestructura TI y ciberseguridad empresarial</li>
+                        <li>Integración de soluciones cloud para reportes en tiempo real</li>
+                    </ul>
+                </div>
 
                 <div class="experience-item">
                     <div class="job-title">Técnico en IT y Reparación de Computadoras</div>
@@ -426,16 +444,18 @@
                     <span class="skill-tag highlight">Windows Server</span>
                     <span class="skill-tag highlight">Redes TCP/IP</span>
                     <span class="skill-tag highlight">Ciberseguridad</span>
+                    <span class="skill-tag highlight">IoT / Sensores</span>
+                    <span class="skill-tag highlight">Gestión de Proyectos</span>
                     <span class="skill-tag">Linux</span>
                     <span class="skill-tag">Azure</span>
                     <span class="skill-tag">Google Cloud</span>
                     <span class="skill-tag">Active Directory</span>
-                    <span class="skill-tag">SIEM</span>
-                    <span class="skill-tag">IDS</span>
+                    <span class="skill-tag">Dashboards / BI</span>
+                    <span class="skill-tag">Automatización</span>
                     <span class="skill-tag">SQL</span>
                     <span class="skill-tag">Python</span>
                     <span class="skill-tag">Hardware</span>
-                    <span class="skill-tag">Microsoft Office</span>
+                    <span class="skill-tag">SIEM / IDS</span>
                     <span class="skill-tag">Virtualización</span>
                 </div>
             </div>
