Add SOUL CORE membership and ecosystem affiliation
- Added soulcore.dev to contact section
- Added SOUL CORE experience (2024 - Present)
  - First human-AI symbiosis tech ecosystem in RD
  - Automation and software development projects
  - Cloud, DevOps and cybersecurity integration
  - Modern stack: Python, Docker, Kubernetes, AWS
- Added Docker and Kubernetes to skills

Co-Authored-By: PRAXIS <praxis@soul-core.dev>

--- a/index.html
+++ b/index.html
@@ -286,6 +286,10 @@
                 <span class="icon">in</span>
                 <span>linkedin.com/in/randolf-joan</span>
             </div>
+            <div class="contact-item">
+                <span class="icon">⚡</span>
+                <span>soulcore.dev</span>
+            </div>
 
             <h2>Perfil</h2>
             <p>Profesional de IT con +5 años de experiencia en soporte técnico, administración de sistemas y gestión tecnológica. Actualmente liderando transformación digital en agroindustria con IoT y automatización. Certificado por Google y Cisco en redes y ciberseguridad.</p>
@@ -348,6 +352,18 @@
                         <li>Automatización de procesos con sensores y controladores</li>
                         <li>Gestión de infraestructura TI y ciberseguridad empresarial</li>
                         <li>Integración de soluciones cloud para reportes en tiempo real</li>
+                    </ul>
+                </div>
+
+                <div class="experience-item" style="border-left-color: #6366f1;">
+                    <div class="job-title">Miembro del Ecosistema Tecnológico</div>
+                    <div class="company">SOUL CORE - Simbiosis Humano-IA</div>
+                    <div class="date">2024 - Presente</div>
+                    <ul class="job-description">
+                        <li>Parte del primer ecosistema tecnológico con simbiosis Humano-IA en RD</li>
+                        <li>Colaboración en proyectos de automatización y desarrollo de software</li>
+                        <li>Integración de soluciones cloud, DevOps y ciberseguridad</li>
+                        <li>Trabajo con stack moderno: Python, Docker, Kubernetes, AWS</li>
                     </ul>
                 </div>
 
@@ -457,6 +473,8 @@
                     <span class="skill-tag">Hardware</span>
                     <span class="skill-tag">SIEM / IDS</span>
                     <span class="skill-tag">Virtualización</span>
+                    <span class="skill-tag">Docker</span>
+                    <span class="skill-tag">Kubernetes</span>
                 </div>
             </div>
         </div>
