Simplify certifications and update experience details
- Certifications reduced to 3: Google Cybersecurity, Cisco Career Path, Python
- Bioenrich: Title changed to "Gerente General y Administrador de Tecnología"
- ZonaPC Plus: Added servers, changed dates to 2020-2023

Co-Authored-By: PRAXIS <praxis@soul-core.dev>

--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
                 <h2 class="section-title">Experiencia Laboral</h2>
 
                 <div class="experience-item" style="border-left-color: #38a169;">
-                    <div class="job-title">Gerente General / Director de Tecnología</div>
+                    <div class="job-title">Gerente General y Administrador de Tecnología</div>
                     <div class="company">Bioenrich - Agroindustria Sostenible</div>
                     <div class="date">Octubre 2024 - Presente (1 año 4 meses)</div>
                     <ul class="job-description">
@@ -368,13 +368,14 @@
                 </div>
 
                 <div class="experience-item">
-                    <div class="job-title">Técnico en IT y Reparación de Computadoras</div>
+                    <div class="job-title">Técnico en IT y Reparación de Computadoras y Servidores</div>
                     <div class="company">Independiente / ZonaPC Plus</div>
-                    <div class="date">Enero 2020 - Presente (5 años)</div>
+                    <div class="date">2020 - 2023 (3 años)</div>
                     <ul class="job-description">
-                        <li>Reparación y mantenimiento de PCs y laptops</li>
+                        <li>Reparación y mantenimiento de PCs, laptops y servidores</li>
                         <li>Diagnóstico de problemas de hardware y software</li>
                         <li>Construcción de equipos de alto rendimiento</li>
+                        <li>Configuración y mantenimiento de servidores Windows/Linux</li>
                         <li>Asesoría técnica a clientes empresariales</li>
                         <li>Soporte remoto y presencial</li>
                     </ul>
@@ -415,28 +416,8 @@
                         <div class="cert-issuer">Cisco - Agosto 2024</div>
                     </div>
                     <div class="cert-item cisco">
-                        <div class="cert-name">Introduction to Cybersecurity</div>
-                        <div class="cert-issuer">Cisco - Agosto 2024</div>
-                    </div>
-                    <div class="cert-item cisco">
-                        <div class="cert-name">Network Support and Security</div>
-                        <div class="cert-issuer">Cisco - Agosto 2024</div>
-                    </div>
-                    <div class="cert-item cisco">
-                        <div class="cert-name">Network Addressing & Troubleshooting</div>
-                        <div class="cert-issuer">Cisco - Agosto 2024</div>
-                    </div>
-                    <div class="cert-item cisco">
                         <div class="cert-name">Python Essentials 1</div>
                         <div class="cert-issuer">Cisco - Agosto 2024</div>
-                    </div>
-                    <div class="cert-item cisco">
-                        <div class="cert-name">Networking Basics</div>
-                        <div class="cert-issuer">Cisco - Julio 2024</div>
-                    </div>
-                    <div class="cert-item cisco">
-                        <div class="cert-name">Computer Hardware Basics</div>
-                        <div class="cert-issuer">Cisco - Enero 2024</div>
                     </div>
                 </div>
             </div>
