--- a/index.html
+++ b/index.html
@@ -38,14 +38,15 @@
             width: 150px;
             height: 150px;
             border-radius: 50%;
-            background: #4a90a4;
             margin: 0 auto 20px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            font-size: 60px;
-            color: white;
             border: 4px solid rgba(255,255,255,0.3);
+            overflow: hidden;
+        }
+
+        .photo-container img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
         }
 
         .sidebar h2 {
@@ -271,7 +272,7 @@
     <div class="container">
         <!-- Sidebar -->
         <div class="sidebar">
-            <div class="photo-container">RR</div>
+            <div class="photo-container"><img src="1568558442611.jpg" alt="Randolf Rodriguez"></div>
 
             <h2>Contacto</h2>
             <div class="contact-item">
